<resources>
    <string name="app_name">YoYo</string>
    <string name="tab_home">首页</string>
    <string name="tab_stock">自选</string>
    <string name="tab_mine">我的</string>
    <string name="tab_stock_name">名称</string>
    <string name="tab_stock_price">价格</string>
    <string name="tab_stock_applies">涨跌幅</string>
    <string name="add_new_stock">添加新股</string>
    <string name="edit">编辑</string>
    <string name="search">搜索</string>
    <string name="searchStock">搜索股票</string>
    <string name="cornerStockNo">暂未关注股票</string>
    <array name="tabName">
        <item>首页</item>
        <item>自选</item>
        <item>我的</item>
    </array>
    <array name="picUrlArray">
        <item>http://ww1.sinaimg.cn/large/007YQ6Isly1gn90q3rsb3j308g08ggqk.jpg</item>
    </array>
    <string name="press_again_exit">再按退出</string>
    <string name="set">设置</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="loginPhoneNum">手机号登录</string>
    <string name="loginGesture">手势登录</string>
    <string name="loginFinger">指纹登录</string>
    <string name="nightMode">夜间模式</string>
    <string name="logout">退出登录</string>
    <string name="loginSuccess">登录成功</string>
    <string name="passwordRight">密码正确</string>
    <string name="gestureTooShort">密码太短，请重新设置</string>
    <string name="gestureCheck">验证密码</string>
    <string name="gestureCheckAgain">密码错误，请重试</string>
    <string name="gestureInputAgain">请再次输入密码</string>
    <string name="gestureInputAgainNotSame">两次输入密码不一致</string>
    <string name="confirmClearGesturePassword">确定清除密码？</string>
    <string name="title_activity_login">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
</resources>