<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/flRoot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/rgTab"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line"
        app:layout_constraintBottom_toTopOf="@+id/rgTab" />

    <RadioGroup
        android:id="@+id/rgTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbHome"
        android:orientation="horizontal"
        android:paddingVertical="3dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/rbHome"
            style="@style/TabRadioButton"
            android:drawableTop="@drawable/tab_icon_home"
            android:text="@string/tab_home" />

        <RadioButton
            android:id="@+id/rbStock"
            style="@style/TabRadioButton"
            android:drawableTop="@drawable/tab_icon_stock"
            android:text="@string/tab_stock" />

        <RadioButton
            android:id="@+id/rbMine"
            style="@style/TabRadioButton"
            android:drawableTop="@drawable/tab_icon_mine"
            android:text="@string/tab_mine" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/flRootFullScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>