<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TabMine">

    <TextView
        android:id="@+id/tvSetTitleMine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/set"
        android:textColor="#333"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGestureSetMine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/loginGesture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetTitleMine" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchGestureMine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvGestureSetMine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvGestureSetMine" />

    <TextView
        android:id="@+id/tvFingerSetMine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/loginFinger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGestureSetMine" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchFingerMine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFingerSetMine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvFingerSetMine" />

</androidx.constraintlayout.widget.ConstraintLayout>
